--- a/styles/style.css
+++ b/styles/style.css
@@ -1,125 +1,51 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 header {
-    display : block;
     margin: 0 auto;
+    display:block;
     width: 100%;
     text-align:center;
 }
-header h1 {
-    font-family: Arial;
-    font-size:40px;
-    font-weight:bold;
+
+header h2 {
+    font-size: 40px;
+    color: #776E65;
+    font-family:Arial;
 }
-header #newGameBtn {
-   display:block;
+header a {
+    display: block;
     margin: 20px auto;
     width: 100px;
     padding: 10px 10px;
     background-color: #8f7a66;
-    font-family:Arial;
-    color:white;
-    border-radius:10px;
-    text-decoration:none;
+    font-family: Arial;
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
 }
-header #newGameBtn:hover{
-    background-color:#9f8b77;
-}
+
 header p {
-    font-family:Arial;
-    font-size:25px;
-    margin:20px auto;
+    font-size: 20px;
+    color: #8F7A66;
+    font-family: Arial;
+    margin: 20px auto;
 }
-#board {
-    positiœon: relative;
-    margin: 0 auto;
-    padding: 0;
-    width: 500px;
-    height: 500px;
-    border-radius: 5px;
-    background-color: #BBADA0;
+
+.board {
+    margin: 15px auto;
+    background-color: #bbada0;
+    position: relative;
 }
-#board .cell {
-    float: left;
-    margin: 20px 0 0 20px;
-    padding: 0;
-    border-radius: 5px;
+.grid-cell {
     width: 100px;
     height: 100px;
-    font-family: Arial;
-    font-size: 70px;
-    font-weight: bold;
-    line-height: 98px;
-    text-align: center;
-    /* 样式过渡效果 */
-    transition: all 0.2s;
-}
-#board [num="no"] {
-    background-color: rgba(238, 228, 218, 0.35);
-}
-#board [num="2"] {
-    color: #888;
-    background-color: #eee4da;
-}
-#board [num="4"] {
-    color: #888;
-    background-color: #ede0c8;
-}
-#board [num="8"] {
-    color: #f9f6f2;
-    background-color: #f2b179;
-}
-#board [num="16"] {
-    color: #f9f6f2;
-    background-color: #f59563;
-}
-#board [num="32"] {
-    color: #f9f6f2;
-    background-color: #f67c5f;
-}
-#board [num="64"] {
-    color: #f9f6f2;
-    background-color: #f65e3b;
-}
-#board [num="128"] {
-    font-size: 50px;
-    color: #f9f6f2;
-    background-color: #edcf72;
-}
-#board [num="256"] {
-    font-size: 50px;
-    color: #f9f6f2;
-    background-color: #edcc61;
-}
-#board [num="512"] {
-    font-size: 50px;
-    color: #f9f6f2;
-    background-color: #edc850;
-}
-#board [num="1024"] {
-    font-size: 40px;
-    color: #f9f6f2;
-    background-color: #edc53f;
-}
-#board [num="2048"] {
-    font-size: 40px;
-    color: #f9f6f2;
-    background-color: #edc22e;
-}
-#board [num="super"] {
-    font-size: 40px;
-    color: #f9f6f2;
-    background-color: #3c3a32;
+    background: #ccc0b3;
+    border-radius: 10px;
+    position: absolute;
 }
 
 .number-cell {
-    border-radius:6px;
-    font-family:Arial;
-    font-size:60px;
-    line-height:100px;
-    text-align:center;
+    font-family: "Microsoft YaHei", "微软雅黑";
+    font-weight: bold;
+    text-align: center;
 
-    position:absolute;
+    position: absolute;
 }
