--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,49 @@ header p {
     font-family: "Microsoft YaHei", "微软雅黑";
     font-weight: bold;
     text-align: center;
-
     position: absolute;
+}
+
+.gameover{
+    display:block;
+    margin: 0 auto;
+    width:500px;
+    text-align:center;
+    vertical-align:middle;
+    position:absolute;
+}
+
+.gameover p{
+     font-family:Arial;
+     font-size: 50px;
+    color:white;
+    margin:20px auto;
+
+    margin-top:150px;
+}
+
+.gameover span{
+    font-family:Arial;
+    font-size:50px;
+    color:white;
+    margin:20px auto;
+}
+
+#restartgamebutton{
+    display:block;
+    margin:20px auto;
+    width: 180px;
+    padding:10px 10px;
+    background-color: #8f7a66;
+
+    font-family:Arial;
+    font-size:30px;
+    color:white;
+
+    border-radius:10px;
+    text-decoration:none;
+}
+
+#restartgamebutton:hover{
+    background-color: #9f8b77;
 }
